RESOLVED FIXED19089
Editing ASSERT in Range::compareBoundaryPoints
https://bugs.webkit.org/show_bug.cgi?id=19089
Summary Editing ASSERT in Range::compareBoundaryPoints
Eric Seidel (no email)
Reported 2008-05-15 14:53:13 PDT
Editing ASSERT in Range::compareBoundaryPoints ASSERTION FAILED: containerA && containerB (/Users/eseidel/Projects/WebKit/WebCore/dom/Range.cpp:458 static short int WebCore::Range::compareBoundaryPoints(WebCore::Node*, int, WebCore::Node*, int)) Found by the fuzzer. See attached test case. doc.execCommand('inserthorizontalrule'); doc.execCommand('formatblock', 0, '<pre>');
Attachments
causes ASSERT in debug builds (462 bytes, text/html)
2008-05-15 14:53 PDT, Eric Seidel (no email)
no flags
patch (2.89 KB, patch)
2008-06-05 16:59 PDT, Justin Garcia
no flags
patch (3.46 KB, patch)
2008-06-05 17:03 PDT, Justin Garcia
eric: review+
Eric Seidel (no email)
Comment 1 2008-05-15 14:53:37 PDT
Created attachment 21182 [details] causes ASSERT in debug builds
Justin Garcia
Comment 2 2008-06-05 16:59:54 PDT
Justin Garcia
Comment 3 2008-06-05 17:03:50 PDT
Created attachment 21515 [details] patch Didn't include the meat of the patch last time.
Eric Seidel (no email)
Comment 4 2008-06-05 17:13:03 PDT
Comment on attachment 21515 [details] patch Looks good to me. r+
Justin Garcia
Comment 5 2008-06-05 17:22:12 PDT
Note You need to log in before you can comment on or make changes to this bug.